[gd_scene load_steps=10 format=2]

[ext_resource path="res://Textures/Message Console.jpg" type="Texture" id=1]
[ext_resource path="res://Textures/navigation.png" type="Texture" id=2]
[ext_resource path="res://Scripts/NavigationScreenConsole.gd" type="Script" id=3]
[ext_resource path="res://Textures/ui/nav_ship.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=5]
resource_local_to_scene = true
font_path = "res://Fonts/Modeseven-L3n5.ttf"

[sub_resource type="DynamicFont" id=7]
resource_local_to_scene = true
size = 28
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=6]
resource_local_to_scene = true
font_path = "res://Fonts/Modeseven-L3n5.ttf"

[sub_resource type="DynamicFont" id=10]
resource_local_to_scene = true
size = 36
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=9]
resource_local_to_scene = true
size = 50
font_data = SubResource( 6 )

[node name="NavigationScreenConsole" type="Node2D"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 800.0
margin_bottom = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerminalBackground" type="TextureRect" parent="Control"]
margin_right = 800.0
margin_bottom = 800.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavigationContainer" type="VBoxContainer" parent="Control"]
margin_top = 20.0
margin_right = 800.0
margin_bottom = 800.0
custom_constants/separation = 15

[node name="HeaderContainer" type="HBoxContainer" parent="Control/NavigationContainer"]
margin_right = 800.0
margin_bottom = 29.0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/NavigationContainer/HeaderContainer"]
margin_left = 315.0
margin_right = 485.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Navigation"

[node name="SubtitleContainer" type="HBoxContainer" parent="Control/NavigationContainer"]
margin_top = 44.0
margin_right = 800.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 100 )
alignment = 1

[node name="Label" type="Label" parent="Control/NavigationContainer/SubtitleContainer"]
margin_left = 268.0
margin_top = 31.0
margin_right = 532.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "This is text"

[node name="NavContainer" type="HBoxContainer" parent="Control/NavigationContainer"]
margin_top = 159.0
margin_right = 800.0
margin_bottom = 709.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Control/NavigationContainer/NavContainer"]
margin_left = 100.0
margin_right = 700.0
margin_bottom = 550.0
rect_min_size = Vector2( 600, 550 )
texture = ExtResource( 2 )

[node name="N" type="Label" parent="Control"]
margin_left = 376.0
margin_top = 213.0
margin_right = 416.0
margin_bottom = 263.0
custom_colors/font_color = Color( 0, 0.572549, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "N"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S" type="Label" parent="Control"]
margin_left = 376.0
margin_top = 681.0
margin_right = 416.0
margin_bottom = 263.0
custom_colors/font_color = Color( 0, 0.572549, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "S"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W" type="Label" parent="Control"]
margin_left = 108.0
margin_top = 441.0
margin_right = 148.0
margin_bottom = 491.0
custom_colors/font_color = Color( 0, 0.572549, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "W"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E" type="Label" parent="Control"]
margin_left = 655.0
margin_top = 441.0
margin_right = 148.0
margin_bottom = 491.0
custom_colors/font_color = Color( 0, 0.572549, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "E"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipDisplay" type="Sprite" parent="."]
position = Vector2( 400, 461 )
texture = ExtResource( 4 )
